@@ -31,9 +31,6 @@ foo ? bar ? 'foo' : 'bar' : 'baz';
 foo ? bar ? foo : bar : baz;
 $foo =~ m?foo?;
 $foo =~ s?foo?bar?;
-$foo =~ m/foo/x;
-$foo =~ s/foo/bar/x;
-qr/foo/x;
 "\N{FOO BAR}";
 `\N{FOO BAR}`;
 qx(\N{FOO BAR});
@@ -58,7 +55,7 @@ use Foo::Bar;
 no Foo::Bar;
 
 ## name BadFeatures
-## failures 45
+## failures 42
 ## cut
 
 $[ = 1;
@@ -87,9 +84,6 @@ defined %foo;
 defined(@foo);
 defined(%foo);
 $foo =~ ?foo?;
-$foo =~ m/foo/xx;
-$foo =~ s/foo/bar/xx;
-qr/foo/xx;
 "\N{FOO BAR}";
 `\N{FOO BAR}`;
 qq{\N{FOO BAR}};
@@ -108,14 +102,6 @@ values $ref;
 require ::Foo::Bar;
 use ::Foo::Bar;
 no ::Foo::Bar;
-
-## name MultipleBadFeatures
-## failures 6
-## cut
-
-qr!\N{FOO BAR}!xx;
-m,\N{FOO BAR},axbxc;
-s[\N{FOO BAR}][]xxx;
 
 ## name POSIXDeprecations
 ## failures 12
