@@ -1,6 +1,7 @@
 {{$NEXT}}
   - Updates to documentation for DeprecatedFeatures and DiscouragedModules policies
   - Add require ::Foo::Bar to DeprecatedFeatures policy
+  - Remove qr//xx violations from DeprecatedFeatures policy as this is now a valid regex modifier.
 
 0.019     2017-01-29 22:13:34 EST
   - Add autoderef to DeprecatedFeatures policy
